--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ selenium==4.8.3
 pdfplumber==0.8.1
 openpyxl==3.1.2
 PyDrive==1.3.1
+closeio~=2.0
+oauth2client~=4.1.3
+google-api-python-client~=2.86.0
