--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ PyDrive==1.3.1
 closeio~=2.0
 oauth2client~=4.1.3
 google-api-python-client~=2.86.0
+Scrapy~=2.8.0
+itemadapter~=0.8.0
+undetected-chromedriver==3.4.6
+cloudscraper~=1.2.71
