--- a/outbound/new_es_ins.yaml
+++ b/outbound/new_es_ins.yaml
@@ -13,4 +13,4 @@ WAITING_TIME = 3600  # wait time for next email sending in seconds
 3. send mail from each connected account 
 4. wait until `WAITING_TIME` seconds 
 5. if a sender already occupied `MAX_LIMIT_PER_DAY`, ignore that sender 
-3. will create a table in previous sqlite.db named as emails
+3. will create a table in previous my_sqlite.db named as emails
