--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas==2.0.0
-requests==2.28.2
+requests~=2.31.0
 beautifulsoup4==4.12.2
 selenium==4.8.3
 pdfplumber==0.8.1
@@ -13,16 +13,16 @@ itemadapter~=0.8.0
 undetected-chromedriver==3.4.6
 cloudscraper~=1.2.71
 cffi~=1.15.1
-Pillow~=9.5.0
+Pillow~=10.0.0
 pytest~=7.3.1
 lxml~=4.9.2
 bs4~=0.0.1
 soupsieve~=2.4.1
 h11~=0.14.0
-pip~=23.1.2
+pip~=20.0.2
 attrs~=23.1.0
-wheel~=0.40.0
-cryptography~=40.0.2
+wheel~=0.34.2
+cryptography~=41.0.3
 rsa~=4.9
 pyasn1~=0.5.0
 pytz~=2023.3
@@ -31,20 +31,20 @@ outcome~=1.2.0
 sniffio~=1.3.0
 exceptiongroup~=1.1.1
 sortedcontainers~=2.4.0
-idna~=3.4
+idna~=2.10
 Wand~=0.6.11
 PyYAML~=6.0
 numpy~=1.24.3
-setuptools~=67.6.1
+setuptools~=44.0.0
 parse~=1.19.0
 six~=1.16.0
 cachetools~=5.3.0
-certifi~=2022.12.7
+certifi~=2023.5.7
 urllib3~=1.26.15
 python-dateutil~=2.8.2
 scipy~=1.10.1
 httplib2~=0.22.0
-pyparsing~=3.0.9
+pyparsing~=3.1.1
 hyperlink~=21.0.0
 pycparser~=2.21
 packaging~=23.1
@@ -58,3 +58,46 @@ twAuto~=0.3.4
 googletrans~=3.0.0
 gspread~=5.8.0
 pySmartDL~=1.3.4
+jmespath~=1.0.1
+Jinja2~=3.1.2
+click~=8.1.3
+cssselect~=1.2.0
+w3lib~=2.1.2
+MarkupSafe~=2.1.3
+parsel~=1.8.1
+Twisted~=22.10.0
+PyDispatcher~=2.0.7
+itemloaders~=1.1.0
+queuelib~=1.6.2
+tldextract~=3.4.4
+Automat~=22.10.0
+incremental~=22.10.0
+constantly~=15.1.0
+blinker~=1.6.2
+filelock~=3.12.2
+Flask~=2.3.2
+python-dotenv~=1.0.0
+websockets~=11.0.3
+hpack~=3.0.0
+hyperframe~=5.2.0
+h2~=3.2.0
+toolz~=0.12.0
+partd~=1.4.0
+dask~=2023.5.0
+fsspec~=2023.6.0
+cloudpickle~=2.2.1
+hstspreload~=2023.1.1
+httpcore~=0.9.1
+rfc3986~=1.5.0
+locket~=1.0.0
+xarray~=2023.1.0
+portalocker~=2.7.0
+netCDF4~=1.6.4
+cftime~=1.6.2
+pluggy~=1.2.0
+iniconfig~=2.0.0
+oauthlib~=3.2.2
+httpx~=0.13.3
+PyMySQL~=1.1.0
+mysql-connector-python~=8.1.0
+protobuf~=4.21.12
