--- a/.gitignore
+++ b/.gitignore
@@ -283,6 +283,7 @@ tags
 /goal_profit/ignore.xlsx
 /goal_profit/~$scrap.xlsx
 /goal_profit/chromedriver.exe
+/golf_lacity/chromedriver.exe
 
 
 #**/migrations/**
