--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pandas==2.0.0
 requests~=2.31.0
 beautifulsoup4==4.12.2
-selenium==4.8.3
+selenium~=4.11.2
 pdfplumber==0.8.1
 openpyxl==3.1.2
 PyDrive==1.3.1
@@ -105,3 +105,10 @@ resend~=0.5.2
 pydantic~=2.3.0
 fastapi~=0.103.0
 mangum~=0.17.0
+Django~=4.2.1
+djangorestframework~=3.14.0
+pyperclip~=1.8.2
+demoji~=1.1.0
+xlwings~=0.30.10
+reportlab~=4.0.4
+colorama~=0.4.6
